# torq-cli-python

./: .gitattributes  .gitignore  MANIFEST.in  MEMORY.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: external-credential-source.md  install.md  prd-implementation-status-2026-07-23.md
docs/architecture/: config-profile-spec.md  credential-storage-requirements.md  extraction-viability-audit-draft.md  extraction-viability-audit.md  foundation-task-status.md  governed-orchestration.md  phase1-status.md  provider-surface-matrix.md  runtime-repository-packaging-decision.md  t06-config-file-spec.md  t06-console-import-spec.md  t06-normalized-import-spec.md
docs/evidence/: live-smoke-2026-07-24.json
docs/plans/: 2026-07-23-full-prd-implementation.md  2026-07-23-t06c-console-import-design.md  2026-07-23-t06c-console-import.md
docs/releases/: torq-cli-v0.1.0.md
docs/security/: production-readiness-audit-2026-07-23.md
docs/testing/: live-provider-smoke.md
examples/: torq-v5-6-live.answers.json
scripts/: audit_extraction.py  run_live_smoke.py  run_named_mutants.py  wheel_smoke.py
src/torq_cli/: __init__.py  __main__.py
src/torq_cli/adapters/: __init__.py  process.py
src/torq_cli/application/: __init__.py  e2e.py  orchestrator.py  (+7 more)
tests/: conftest.py  test_cli.py  test_config_schema.py  test_drift_oracle.py  test_external_env_credentials.py  test_findings.py  test_headless_fallback.py  test_hermetic.py  test_native_credentials.py  test_packaging.py  test_phase1_evidence.py  test_phase2_conformance.py  test_phase2_core.py  test_phase3_cli.py  test_phase3_connectors.py  test_phase4_orchestrator.py  test_phase4_safety.py  test_phase5_cli_commands.py  test_phase5_cli_experience.py  test_phase6_release.py  test_registry_schema.py  test_resolution.py  test_v5_config_import.py  test_v5_console_import.py
tests/fixtures/: torq-console-v5-config.yaml
ui/: README.md
(+50 files in other folders)
