[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torq-cli"
version = "0.1.0"
description = "Offline TORQ governance profile validator"
requires-python = ">=3.11"
dependencies = ["cryptography>=42.0", "PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["build>=1.2", "mypy>=1.10", "pytest>=8.0", "ruff>=0.6", "types-PyYAML>=6.0"]

[project.scripts]
torq = "torq_cli.interfaces.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
torq_cli = ["data/**/*.yaml", "data/**/*.json", "data/**/*.md"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
