[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torq-cli"
version = "0.1.0"
description = "Offline TORQ governance profile validator"
requires-python = ">=3.11"
dependencies = ["cryptography>=42.0", "PyYAML>=6.0"]

[project.optional-dependencies]
dev = [
    "build==1.5.0",
    "mypy==2.0.0",
    "pytest==9.0.2",
    "ruff==0.15.12",
    "types-PyYAML>=6.0,<7.0",
]

[project.scripts]
torq = "torq_cli.interfaces.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
torq_cli = ["data/**/*.yaml", "data/**/*.json", "data/**/*.md"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["torq_cli.adapters.process", "torq_cli.domain.hermetic"]
disable_error_code = ["attr-defined"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
